--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -52,8 +52,8 @@ body{
     }
 }
 
-//header del index
-main{
+//main del index
+.main-index{
     background: $color-div;
     margin-top: 5rem;
     .contenido-principal{
@@ -95,7 +95,6 @@ section{
     background: $color-div;
     margin-top: 5rem;
     margin-bottom: 5rem;
-
 }
 .section-carta{
     display: flex;
