--- a/sass/utilidades/_mediaqueries.scss
+++ b/sass/utilidades/_mediaqueries.scss
@@ -130,18 +130,18 @@ body{
     .carousel-inner{
         div{
             .conociendo-pluton{
-                width: 25rem;
-                height: 15rem;
+                width: 23rem;
+                height: 14rem;
             }  
         }
         .carousel-item{
             .conociendo-jupiter{
-                width: 25rem;
-                height: 15rem;
+                width: 23rem;
+                height: 14rem;
                 }
                 .conociendo-luna{
-                width: 25rem;
-                height: 15rem;
+                width: 23rem;
+                height: 14rem;
                 }
             }  
         }
@@ -193,7 +193,7 @@ footer{
 
 
     
-//mq para indextablet
+//mq para index tablet
 @media (max-width:768px){
    //main del index
 .main-index{
@@ -327,6 +327,9 @@ footer{
     }
 //...................footer
 footer{
+    .footer-mobile{
+        display: none;
+    }
     .footer-contenedor{
         p{
             width: 10rem;
@@ -346,4 +349,283 @@ footer{
         }
     }
 }
+}
+
+// ------------mediaquerie Sobremi -------------------
+
+@media (max-width:667px){
+body{
+    .sobre-mi{
+        .historia-mia{
+            display: none;
+         }
+        .big3{
+            display: flex;
+            margin-bottom: 3rem;
+            img{
+                width: 3.8rem;
+            }
+            p{
+            color: white; 
+            }
+        }
+        .historia-mia-mobile{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            img{
+                width: 25rem;
+            }
+            p{
+                width: 23rem;
+                text-align: left;
+                color: $color-h1;
+                margin-left: 1rem;
+            }
+            .h2-historia, .h3-astro{
+                align-items: flex-start;
+                color: $color-h1;
+                margin-bottom: 2rem;
+                margin-left: 1rem;
+            }
+        }
+        
+    }
+        
+       //section carta y planetas
+    .eric-carta{
+       margin-top: 5rem;
+       padding-bottom: 5rem;
+       .h4-micarta{
+           color: white;
+           margin-left: 0.5rem;
+           margin-bottom: 5rem;
+           padding-top: 3rem;
+           align-self: center;
+           font-size:x-large;
+       }
+       .mi-carta{
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            .imagen-carta{
+                width: 22rem;
+                height: 22rem;
+                -moz-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                border-radius: 50%;
+                background: #fffff0;
+                overflow: hidden;
+                margin: 0;
+                padding: 0;
+                margin-bottom: 3rem;
+                img{
+                      width: 19rem;
+                      height: 19rem;
+                      margin-top: 1.5rem;
+                }
+            }
+            ul{
+                display: flex;
+                flex-direction: column;
+                align-self: center;
+                margin: 0;
+                padding: 0;
+                li{
+                    list-style: none;
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+        .h4-texto-carta{
+            color: $color-h1;
+            margin-top: 5rem;
+            align-self: flex-start;
+            margin-bottom: 3rem;
+            margin-left: 1rem;
+        }
+        .texto-carta{
+            text-align: left;
+            color: $color-p;
+            margin-bottom: 5rem;
+            width: 23rem;
+
+        }
+    }
+//...................footer
+footer{
+    .footer-contenedor{
+     display: none;
+    }
+    .footer-mobile{
+          background: $color-footer;
+          padding: 0.5rem;
+          margin-top: 5rem;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-evenly;
+          margin-top: 2rem;
+          margin-bottom: 1.2rem;
+          text-align: center;
+          color: rgb(31, 31, 31);
+         .derechos{
+             font-size: smaller;
+            a{
+                text-decoration: none;
+                list-style: none;
+                color: rgb(247, 105, 23);
+                
+            }
+         }
+         .imagenes-footer{
+             a{
+                 list-style: none;
+                 text-decoration: none;
+                 img{
+                     width: 2.2rem;
+                     height: 2.2rem;
+                     margin-right: 0.8rem;
+                     margin-bottom: 2rem;
+                 }
+             }
+         }
+     }  
+   }
+ }
+}
+
+//mediaquerie para tablet (sobre mi)
+@media (max-width:768px){
+    body{
+        .sobre-mi{
+            background: $color-div;
+            h1{
+                color: white;
+                margin-top: 3rem;
+                margin-left: 0.5rem;
+                margin-bottom: 2rem;
+                padding-top: 2rem;
+            }
+            .big3{
+                display: flex;
+                margin-bottom: 3rem;
+                img{
+                    width: 8rem;
+                }
+                p{
+                flex-direction: column;
+                align-self: center;   
+                color: white; 
+                   
+                }
+            }
+            .historia-mia{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 0.2fr 1fr 0.2fr 1fr;
+                grid-template-areas: 
+                "imagen-eric imagen-eric"
+                "h2-historia h2-historia"
+                "historia historia"
+                "h3-astro h3-astro"
+                "historia-astro historia-astro";
+                .h2-historia{
+                    grid-area: h2-historia;
+                }
+                .historia{
+                    grid-area: historia;
+                    
+                }
+                .h3-astro{
+                    grid-area: h3-astro;
+                }
+                .historia-astro{
+                    grid-area: historia-astro;
+                    
+                }
+                .imagen-eric{
+                    grid-area: imagen-eric;
+                    width: 28rem;
+                    align-self: center;
+                    justify-self: center;
+                }
+                h1, h2, h3, p{
+                    color: white;
+                    margin-left: 0.5rem;
+                }
+                
+            }
+        }// hasta aca grid
+        .eric-carta{
+            display: grid;
+            grid-template-columns:1fr;
+            grid-template-rows: 0.5fr 1fr 0.5fr 1fr;
+            grid-template-areas:
+            "h4-micarta h4-micarta"
+            "imagen-carta ul"
+            "h4-texto-carta h4-texto-carta"
+            "texto-carta texto-carta";
+            .mi-carta{
+                .imagen-carta{
+                    grid-area: imagen-carta;
+                    width: 20rem;
+                    height: 20rem;
+                    margin-left: 1.5rem;
+                    img{
+                        width: 17rem;
+                        height: 17rem;
+                    }
+                }
+                ul{
+                    grid-area: ul;
+                    li{
+                        text-align: left;
+                        width: 20rem;
+                    }
+
+                }
+            }
+            .h4-micarta{
+                grid-area: h4-micarta;
+            }
+            .h4-texto-carta{
+                grid-area: h4-texto-carta;
+                text-align: left;
+                margin-left: 1rem;
+            }
+            .texto-carta{
+                grid-area: texto-carta;
+                width: 45rem;
+                text-align: left;
+                margin-left: 1rem;
+            }
+
+        }
+        //...................footer
+        footer{
+            .footer-mobile{
+                display: none;
+            }
+            .footer-contenedor{
+                p{
+                    width: 10rem;
+                }
+                .imagenes-footer{
+                    flex-direction: column;
+                    align-self: center;
+                    a{
+                      list-style: none;
+                      text-decoration: none;
+                    img{
+                        width: 2.2rem;
+                        height: 2.2rem;
+                        margin-right: 0.3rem;
+                    }
+                    }
+                }
+            }
+        }
+    }//esto es body
 }
