--- a/css/styles.css
+++ b/css/styles.css
@@ -212,8 +212,6 @@ body .sobre-mi {
       flex-direction: column;
       align-self: center;
       color: white; }
-  body .sobre-mi .historia-mia-mobile {
-    display: none; }
   body .sobre-mi .historia-mia {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -288,6 +286,31 @@ body .eric-carta {
     color: white;
     margin-bottom: 5rem;
     width: 70rem; }
+
+body footer {
+  background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
+  padding: 0.7rem;
+  margin-top: 5rem; }
+  body footer .footer-mobile {
+    display: none; }
+  body footer .footer-contenedor {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    color: #1f1f1f; }
+    body footer .footer-contenedor .derechos a {
+      text-decoration: none;
+      list-style: none;
+      color: #f76917; }
+    body footer .footer-contenedor .imagenes-footer a {
+      list-style: none;
+      text-decoration: none; }
+      body footer .footer-contenedor .imagenes-footer a img {
+        width: 2.2rem;
+        height: 2.2rem;
+        margin-right: 0.3rem; }
 
 .servicios-carta {
   display: flex;
@@ -450,101 +473,104 @@ body .eric-carta {
     grid-area: luna-101; }
 
 @media (max-width: 667px) {
-  body .boton-wpp {
-    right: 15px;
-    padding: 15px;
-    transition: ease 0,3s;
-    margin-bottom: 1rem; }
-    body .boton-wpp .hablemos {
-      color: white; }
-    body .boton-wpp .whatsapp img {
-      width: 5rem;
-      height: 5rem; }
-  body .main-index .contenido-principal .bloque-imagenes .mano {
-    align-self: center;
-    width: 15rem;
-    height: 15rem; }
-  body .section-carta .section-astrox .texto-h2 {
-    width: 20rem; }
-  body .section-carta .section-astrox .cartanatal-servicios {
-    display: flex; }
-    body .section-carta .section-astrox .cartanatal-servicios .cartanatal-index {
+  body {
+    margin: 0;
+    padding: 0; }
+    body .boton-wpp {
+      right: 15px;
+      padding: 15px;
+      transition: ease 0,3s;
+      margin-bottom: 1rem; }
+      body .boton-wpp .hablemos {
+        color: white; }
+      body .boton-wpp .whatsapp img {
+        width: 5rem;
+        height: 5rem; }
+    body .main-index .contenido-principal .bloque-imagenes .mano {
+      align-self: center;
+      width: 15rem;
+      height: 15rem; }
+    body .section-carta .section-astrox .texto-h2 {
+      width: 20rem; }
+    body .section-carta .section-astrox .cartanatal-servicios {
+      display: flex; }
+      body .section-carta .section-astrox .cartanatal-servicios .cartanatal-index {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 18rem;
+        height: 18rem;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+        background: #fffff0;
+        margin-bottom: 2rem;
+        overflow: hidden; }
+        body .section-carta .section-astrox .cartanatal-servicios .cartanatal-index img {
+          width: 15rem;
+          height: 15rem;
+          margin-top: 1.5rem;
+          transition: 0.5s;
+          object-fit: cover; }
+    body .section-carta .section-astrox .servicios-texto {
+      margin-top: 2rem;
+      text-align: center; }
+    body .section-carta .section-astrox h3 {
+      text-align: center;
+      font-size: larger;
+      color: white;
+      margin-bottom: 1.5rem; }
+    body .section-carta .section-astrox ul {
+      margin-left: 0px;
+      padding: 0px;
+      margin-bottom: 2rem;
+      text-align: center;
+      width: 20rem; }
+      body .section-carta .section-astrox ul li {
+        font-size: small;
+        text-align: center;
+        color: white;
+        list-style: none;
+        margin: 0 0 0 0;
+        margin-top: 1rem; }
+    body .section-cursos {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      margin-top: 3rem;
+      margin-bottom: 3rem; }
+      body .section-cursos .texto-cursos {
+        align-self: center;
+        color: white;
+        text-align: center;
+        width: 25rem; }
+        body .section-cursos .texto-cursos p {
+          text-align: center;
+          margin-right: 2rem; }
+        body .section-cursos .texto-cursos .cursos {
+          margin-bottom: 2rem;
+          margin-right: 2rem; }
+        body .section-cursos .texto-cursos a {
+          text-decoration: none;
+          color: white; }
+      body .section-cursos .video-youtube iframe {
+        width: 22rem;
+        margin: 2rem; }
+    body .carousel {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 18rem;
-      height: 18rem;
-      -moz-border-radius: 50%;
-      -webkit-border-radius: 50%;
-      border-radius: 50%;
-      background: #fffff0;
-      margin-bottom: 2rem;
-      overflow: hidden; }
-      body .section-carta .section-astrox .cartanatal-servicios .cartanatal-index img {
-        width: 15rem;
-        height: 15rem;
-        margin-top: 1.5rem;
-        transition: 0.5s;
-        object-fit: cover; }
-  body .section-carta .section-astrox .servicios-texto {
-    margin-top: 2rem;
-    text-align: center; }
-  body .section-carta .section-astrox h3 {
-    text-align: center;
-    font-size: larger;
-    color: white;
-    margin-bottom: 1.5rem; }
-  body .section-carta .section-astrox ul {
-    margin-left: 0px;
-    padding: 0px;
-    margin-bottom: 2rem;
-    text-align: center;
-    width: 20rem; }
-    body .section-carta .section-astrox ul li {
-      font-size: small;
-      text-align: center;
-      color: white;
-      list-style: none;
-      margin: 0 0 0 0;
-      margin-top: 1rem; }
-  body .section-cursos {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    margin-top: 3rem;
-    margin-bottom: 3rem; }
-    body .section-cursos .texto-cursos {
-      align-self: center;
-      color: white;
-      text-align: center;
-      width: 25rem; }
-      body .section-cursos .texto-cursos p {
-        text-align: center;
-        margin-right: 2rem; }
-      body .section-cursos .texto-cursos .cursos {
-        margin-bottom: 2rem;
-        margin-right: 2rem; }
-      body .section-cursos .texto-cursos a {
-        text-decoration: none;
-        color: white; }
-    body .section-cursos .video-youtube iframe {
-      width: 22rem;
-      margin: 2rem; }
-  body .carousel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem; }
-    body .carousel .carousel-inner div .conociendo-pluton {
-      width: 23rem;
-      height: 14rem; }
-    body .carousel .carousel-inner .carousel-item .conociendo-jupiter {
-      width: 23rem;
-      height: 14rem; }
-    body .carousel .carousel-inner .carousel-item .conociendo-luna {
-      width: 23rem;
-      height: 14rem; }
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem; }
+      body .carousel .carousel-inner div .conociendo-pluton {
+        width: 23rem;
+        height: 14rem; }
+      body .carousel .carousel-inner .carousel-item .conociendo-jupiter {
+        width: 23rem;
+        height: 14rem; }
+      body .carousel .carousel-inner .carousel-item .conociendo-luna {
+        width: 23rem;
+        height: 14rem; }
   footer .footer-contenedor {
     display: none; }
   footer .footer-mobile {
@@ -681,109 +707,60 @@ body .eric-carta {
         margin-right: 0.3rem; } }
 
 @media (max-width: 667px) {
-  body .sobre-mi .historia-mia {
-    display: none; }
-  body .sobre-mi .big3 {
-    display: flex;
-    margin-bottom: 3rem; }
-    body .sobre-mi .big3 img {
-      width: 3.8rem; }
-    body .sobre-mi .big3 p {
-      color: white; }
-  body .sobre-mi .historia-mia-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; }
-    body .sobre-mi .historia-mia-mobile img {
-      width: 25rem; }
-    body .sobre-mi .historia-mia-mobile p {
-      width: 23rem;
-      text-align: left;
-      color: white;
-      margin-left: 1rem; }
-    body .sobre-mi .historia-mia-mobile .h2-historia, body .sobre-mi .historia-mia-mobile .h3-astro {
-      align-items: flex-start;
-      color: white;
-      margin-bottom: 2rem;
-      margin-left: 1rem; }
-  body .eric-carta {
-    margin-top: 5rem;
-    padding-bottom: 5rem; }
-    body .eric-carta .h4-micarta {
-      color: white;
-      margin-left: 0.5rem;
-      margin-bottom: 5rem;
-      padding-top: 3rem;
-      align-self: center;
-      font-size: x-large; }
-    body .eric-carta .mi-carta {
-      display: flex;
-      flex-direction: column;
-      align-content: center; }
-      body .eric-carta .mi-carta .imagen-carta {
-        width: 22rem;
-        height: 22rem;
-        -moz-border-radius: 50%;
-        -webkit-border-radius: 50%;
-        border-radius: 50%;
-        background: #fffff0;
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-        margin-bottom: 3rem; }
-        body .eric-carta .mi-carta .imagen-carta img {
-          width: 19rem;
-          height: 19rem;
-          margin-top: 1.5rem; }
-      body .eric-carta .mi-carta ul {
+  body {
+    margin: 0;
+    padding: 0; }
+    body .sobre-mi {
+      background: linear-gradient(to right, #4e4376, #2b5876); }
+      body .sobre-mi h1 {
+        text-align: center; }
+      body .sobre-mi .big3 {
+        display: flex;
+        text-align: center;
+        justify-content: center; }
+        body .sobre-mi .big3 img {
+          width: 5rem;
+          height: 5rem; }
+        body .sobre-mi .big3 .asc-geminis {
+          margin-right: 1rem; }
+      body .sobre-mi #historia-mia-id {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.1fr 1fr 0.1fr 1fr;
+        grid-template-areas: "imagen-eric imagen-eric" "h2-historia h2-historia" "historia historia" "h3-astro h3-astro" "historia-astro historia-astro"; }
+        body .sobre-mi #historia-mia-id .h2-historia {
+          grid-area: h2-historia; }
+        body .sobre-mi #historia-mia-id .historia {
+          grid-area: historia; }
+        body .sobre-mi #historia-mia-id .h3-astro {
+          grid-area: h3-astro; }
+        body .sobre-mi #historia-mia-id .historia-astro {
+          grid-area: historia-astro; }
+        body .sobre-mi #historia-mia-id #foto-eric {
+          width: 25rem;
+          justify-content: center;
+          align-items: center; }
+        body .sobre-mi #historia-mia-id h1, body .sobre-mi #historia-mia-id h2, body .sobre-mi #historia-mia-id h3, body .sobre-mi #historia-mia-id p {
+          color: white;
+          margin-left: 0.5rem; }
+    body #eric-carta-flex {
+      display: flex; }
+      body #eric-carta-flex .h4-micarta {
+        margin-bottom: 5rem; }
+      body #eric-carta-flex .mi-carta {
         display: flex;
         flex-direction: column;
-        align-self: center;
-        margin: 0;
-        padding: 0; }
-        body .eric-carta .mi-carta ul li {
-          list-style: none;
-          text-decoration: none;
-          color: white; }
-    body .eric-carta .h4-texto-carta {
-      color: white;
-      margin-top: 5rem;
-      align-self: flex-start;
-      margin-bottom: 3rem;
-      margin-left: 1rem; }
-    body .eric-carta .texto-carta {
-      text-align: left;
-      color: white;
-      margin-bottom: 5rem;
-      width: 23rem; }
-  body footer .footer-contenedor {
-    display: none; }
-  body footer .footer-mobile {
-    background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
-    padding: 0.5rem;
-    margin-top: 5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 2rem;
-    margin-bottom: 1.2rem;
-    text-align: center;
-    color: #1f1f1f; }
-    body footer .footer-mobile .derechos {
-      font-size: smaller; }
-      body footer .footer-mobile .derechos a {
-        text-decoration: none;
-        list-style: none;
-        color: #f76917; }
-    body footer .footer-mobile .imagenes-footer a {
-      list-style: none;
-      text-decoration: none; }
-      body footer .footer-mobile .imagenes-footer a img {
-        width: 2.2rem;
-        height: 2.2rem;
-        margin-right: 0.8rem;
-        margin-bottom: 2rem; } }
+        align-self: center; }
+        body #eric-carta-flex .mi-carta .imagen-carta {
+          margin-right: 0px; }
+        body #eric-carta-flex .mi-carta ul {
+          margin-right: 0px; }
+          body #eric-carta-flex .mi-carta ul li {
+            text-align: center;
+            margin: 0;
+            padding: 0; }
+      body #eric-carta-flex #texto-signos-micarta {
+        width: 23rem; } }
 
 @media (max-width: 768px) {
   body .sobre-mi {
@@ -853,20 +830,34 @@ body .eric-carta {
       width: 45rem;
       text-align: left;
       margin-left: 1rem; }
-  body footer .footer-mobile {
+  body footer .footer-contenedor {
     display: none; }
-  body footer .footer-contenedor p {
-    width: 10rem; }
-  body footer .footer-contenedor .imagenes-footer {
+  body footer .footer-mobile {
+    background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
+    padding: 0.5rem;
+    margin-top: 5rem;
+    display: flex;
     flex-direction: column;
-    align-self: center; }
-    body footer .footer-contenedor .imagenes-footer a {
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    margin-bottom: 1.2rem;
+    text-align: center;
+    color: #1f1f1f; }
+    body footer .footer-mobile .derechos {
+      font-size: smaller; }
+      body footer .footer-mobile .derechos a {
+        text-decoration: none;
+        list-style: none;
+        color: #f76917; }
+    body footer .footer-mobile .imagenes-footer a {
       list-style: none;
       text-decoration: none; }
-      body footer .footer-contenedor .imagenes-footer a img {
+      body footer .footer-mobile .imagenes-footer a img {
         width: 2.2rem;
         height: 2.2rem;
-        margin-right: 0.3rem; } }
+        margin-right: 0.8rem;
+        margin-bottom: 2rem; } }
 
 * {
   margin: 0;
