--- a/sass/utilidades/_mediaqueries.scss
+++ b/sass/utilidades/_mediaqueries.scss
@@ -4,6 +4,8 @@
 @media (max-width:667px){
 //section carta natal
 body{
+    margin: 0;
+    padding: 0;
     .boton-wpp{
         right: 15px;
         padding: 15px;
@@ -354,149 +356,92 @@ footer{
 // ------------mediaquerie Sobremi -------------------
 
 @media (max-width:667px){
-body{
-    .sobre-mi{
-        .historia-mia{
-            display: none;
-         }
-        .big3{
-            display: flex;
-            margin-bottom: 3rem;
-            img{
-                width: 3.8rem;
+    body{
+        margin: 0;
+        padding: 0;
+        .sobre-mi{
+            background: $color-div;
+            h1{
+                text-align: center;
             }
-            p{
-            color: white; 
-            }
-        }
-        .historia-mia-mobile{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            img{
-                width: 25rem;
-            }
-            p{
-                width: 23rem;
-                text-align: left;
-                color: $color-h1;
-                margin-left: 1rem;
-            }
-            .h2-historia, .h3-astro{
-                align-items: flex-start;
-                color: $color-h1;
-                margin-bottom: 2rem;
-                margin-left: 1rem;
-            }
-        }
-        
-    }
-        
-       //section carta y planetas
-    .eric-carta{
-       margin-top: 5rem;
-       padding-bottom: 5rem;
-       .h4-micarta{
-           color: white;
-           margin-left: 0.5rem;
-           margin-bottom: 5rem;
-           padding-top: 3rem;
-           align-self: center;
-           font-size:x-large;
-       }
-       .mi-carta{
-            display: flex;
-            flex-direction: column;
-            align-content: center;
-            .imagen-carta{
-                width: 22rem;
-                height: 22rem;
-                -moz-border-radius: 50%;
-                -webkit-border-radius: 50%;
-                border-radius: 50%;
-                background: #fffff0;
-                overflow: hidden;
-                margin: 0;
-                padding: 0;
-                margin-bottom: 3rem;
+            .big3{
+                display: flex;
+                text-align: center;
+                justify-content: center;
                 img{
-                      width: 19rem;
-                      height: 19rem;
-                      margin-top: 1.5rem;
+                    width: 5rem ;
+                    height: 5rem;
+                }
+                .asc-geminis{
+                    margin-right: 1rem;
                 }
             }
-            ul{
+            #historia-mia-id{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 0.5fr 0.1fr 1fr 0.1fr 1fr;
+                grid-template-areas: 
+                "imagen-eric imagen-eric"
+                "h2-historia h2-historia"
+                "historia historia"
+                "h3-astro h3-astro"
+                "historia-astro historia-astro";
+                .h2-historia{
+                    grid-area: h2-historia;
+                }
+                .historia{
+                    grid-area: historia;
+                    
+                }
+                .h3-astro{
+                    grid-area: h3-astro;
+                }
+                .historia-astro{
+                    grid-area: historia-astro;
+                    
+                }
+                #foto-eric{
+                    width: 25rem;
+                    justify-content: center;
+                    align-items: center;
+                }
+                h1, h2, h3, p{
+                    color: white;
+                    margin-left: 0.5rem;
+                }
+            }
+        }// hasta aca va el main
+        #eric-carta-flex{
+            display: flex;
+            .h4-micarta{
+                margin-bottom: 5rem;
+            }
+            .mi-carta{
                 display: flex;
                 flex-direction: column;
                 align-self: center;
-                margin: 0;
-                padding: 0;
-                li{
-                    list-style: none;
-                    text-decoration: none;
-                    color: white;
+                .imagen-carta{
+                    margin-right: 0px;
+                }
+                ul{
+                    margin-right: 0px;
+                    li{
+                        text-align: center;
+                        margin: 0;
+                        padding: 0;
+                    }
                 }
             }
-        }
-        .h4-texto-carta{
-            color: $color-h1;
-            margin-top: 5rem;
-            align-self: flex-start;
-            margin-bottom: 3rem;
-            margin-left: 1rem;
-        }
-        .texto-carta{
-            text-align: left;
-            color: $color-p;
-            margin-bottom: 5rem;
-            width: 23rem;
+            #texto-signos-micarta{
+                width: 23rem;
+            }
 
         }
     }
-//...................footer
-footer{
-    .footer-contenedor{
-     display: none;
-    }
-    .footer-mobile{
-          background: $color-footer;
-          padding: 0.5rem;
-          margin-top: 5rem;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-evenly;
-          margin-top: 2rem;
-          margin-bottom: 1.2rem;
-          text-align: center;
-          color: rgb(31, 31, 31);
-         .derechos{
-             font-size: smaller;
-            a{
-                text-decoration: none;
-                list-style: none;
-                color: rgb(247, 105, 23);
-                
-            }
-         }
-         .imagenes-footer{
-             a{
-                 list-style: none;
-                 text-decoration: none;
-                 img{
-                     width: 2.2rem;
-                     height: 2.2rem;
-                     margin-right: 0.8rem;
-                     margin-bottom: 2rem;
-                 }
-             }
-         }
-     }  
-   }
- }
 }
 
 //mediaquerie para tablet (sobre mi)
+//el tema esta en el mq de tablet
 @media (max-width:768px){
     body{
         .sobre-mi{
@@ -605,27 +550,44 @@ footer{
         }
         //...................footer
         footer{
-            .footer-mobile{
-                display: none;
-            }
             .footer-contenedor{
-                p{
-                    width: 10rem;
-                }
-                .imagenes-footer{
-                    flex-direction: column;
-                    align-self: center;
-                    a{
-                      list-style: none;
-                      text-decoration: none;
-                    img{
-                        width: 2.2rem;
-                        height: 2.2rem;
-                        margin-right: 0.3rem;
-                    }
-                    }
-                }
+             display: none;
             }
-        }
-    }//esto es body
-}
+            .footer-mobile{
+                  background: $color-footer;
+                  padding: 0.5rem;
+                  margin-top: 5rem;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  justify-content: space-evenly;
+                  margin-top: 2rem;
+                  margin-bottom: 1.2rem;
+                  text-align: center;
+                  color: rgb(31, 31, 31);
+                 .derechos{
+                     font-size: smaller;
+                    a{
+                        text-decoration: none;
+                        list-style: none;
+                        color: rgb(247, 105, 23);
+                        
+                    }
+                 }
+                 .imagenes-footer{
+                     a{
+                         list-style: none;
+                         text-decoration: none;
+                         img{
+                             width: 2.2rem;
+                             height: 2.2rem;
+                             margin-right: 0.8rem;
+                             margin-bottom: 2rem;
+                         }
+                     }
+                 }
+             }  
+           }
+         }
+}//esto es body
+
