--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,8 @@ body footer {
   justify-content: center;
   align-items: center; }
   .servicios-carta h1, .servicios-carta p {
-    color: white; }
+    color: white;
+    margin-top: 2rem; }
   .servicios-carta p {
     width: 60rem;
     margin-top: 2rem;
@@ -341,10 +342,9 @@ body footer {
     border-radius: 3rem;
     text-align: center;
     margin: 1rem;
-    width: 40rem;
+    width: 35rem;
     padding: 5rem;
-    transition: transform 0.2s;
-    box-shadow: 0px 15px 25px #030126; }
+    transition: transform 0.2s; }
     .servicios div h2 {
       margin-bottom: 3rem; }
     .servicios div a {
@@ -858,6 +858,75 @@ body footer {
         height: 2.2rem;
         margin-right: 0.8rem;
         margin-bottom: 2rem; } }
+
+@media (max-width: 678px) {
+  body .servicios-carta h1 {
+    width: 23rem;
+    text-align: center;
+    margin-top: 3rem; }
+  body .servicios-carta p {
+    width: 25rem;
+    text-align: center; }
+  body .servicios {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    body .servicios .carta-online, body .servicios .carta-revo, body .servicios .carta-escrita, body .servicios .carta-escrita-revo {
+      border-radius: 3rem;
+      text-align: center;
+      margin: 1rem;
+      width: 23rem;
+      padding: 2rem; }
+  body .preguntas-frecuentes .divisor-preguntas img {
+    width: 10rem; }
+  body .preguntas-frecuentes .divisor-preguntas h3 {
+    margin-bottom: 2rem; }
+  body .preguntas-frecuentes h3, body .preguntas-frecuentes h4 {
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-top: 2rem; }
+  body .preguntas-frecuentes p {
+    width: 25rem;
+    text-align: center; } }
+
+@media (max-width: 768px) {
+  .servicios-carta p {
+    width: 40rem;
+    text-align: center; }
+  .servicios {
+    gap: 2rem; }
+    .servicios .carta-escrita, .servicios .carta-escrita-revo, .servicios .carta-online, .servicios .carta-revo {
+      width: 19em;
+      padding: 1rem; }
+      .servicios .carta-escrita h2, .servicios .carta-escrita-revo h2, .servicios .carta-online h2, .servicios .carta-revo h2 {
+        margin-bottom: 2rem;
+        margin-top: 2rem; }
+  .preguntas-frecuentes .divisor-preguntas img {
+    width: 12rem; }
+  .preguntas-frecuentes .divisor-preguntas h3 {
+    margin-bottom: 2rem; }
+  .preguntas-frecuentes h3, .preguntas-frecuentes h4 {
+    margin-bottom: 2rem;
+    margin-top: 2rem; }
+  .preguntas-frecuentes p {
+    width: 40rem; } }
+
+@media (max-width: 678px) {
+  body .main-talleres .taller-luna, body .main-talleres .taller-ascendente, body .main-talleres .taller-marte, body .main-talleres .taller-venus {
+    width: 22rem;
+    padding: 4rem; }
+    body .main-talleres .taller-luna p, body .main-talleres .taller-ascendente p, body .main-talleres .taller-marte p, body .main-talleres .taller-venus p {
+      width: 15rem; }
+  body .main-talleres .taller-venus img {
+    display: none; } }
+
+@media (max-width: 768px) {
+  .body .main-talleres .taller-luna, .body .main-talleres .taller-ascendente, .body .main-talleres .taller-marte, .body .main-talleres .taller-venus {
+    width: 30rem;
+    padding: 3rem; }
+  .body .main-talleres .taller-luna {
+    width: 30rem;
+    padding: 3rem; } }
 
 * {
   margin: 0;
