--- a/sass/utilidades/_cartanatal.scss
+++ b/sass/utilidades/_cartanatal.scss
@@ -6,6 +6,7 @@
     align-items: center;
     h1, p{
         color: $color-p;
+        margin-top: 2rem;
     }
     p{
         width: 60rem;
@@ -33,10 +34,10 @@
         border-radius: 3rem;
         text-align: center;
         margin: 1rem;
-        width: 40rem;
+        width: 35rem;
         padding: 5rem;
         transition: transform 0.2s;
-        box-shadow: 0px 15px 25px rgb(3, 1, 38);
+        
         h2{
             margin-bottom: 3rem;
         }
